--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
 <h1 class="text-center">click me (testing jquery/bootstrap)</h1>
+<h3>hii</h3>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, necessitatibus?</p>
