creat page web site

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<p>home works!</p>
+<!-- <p>home works!</p>
 <form [formGroup]="registerForm" (ngSubmit)="registerD(registerForm)">
   <input formControlName="email" type="text" placeholder="email">
 <input formControlName="password" type="text" placeholder="password">
@@ -6,4 +6,21 @@
 
 </form>
 <h3>hiiiiiiiiii</h3>
-<h3>abood</h3>
+<h3>abood</h3> -->
+<section>
+  <div class="container">
+    <div class="row ">
+      <div class="col-lg-6 justify-content-center d-flex align-items-center">
+        <div class="">
+          <img class="img-fluid homeImage" src="../../assets/images/home page.png" alt="">
+        </div>
+      </div>
+      <div class="col-lg-6 justify-content-center d-flex align-items-center">
+        <div>
+          <h1 class="mb-3">Start Your..<br> Career Now</h1>
+          <button class="py-2 px-4 text-white rounded-5 bg-danger border-0" type="button">Make Cv</button>
+      </div>
+    </div>
+    </div>
+  </div>
+</section>
